--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ msbuild.wrn
 
 # Visual Studio 2015
 .vs/
+/CarRental/.vs/CarRental/v16/.suo
+/CarRental/.vs/CarRental/DesignTimeBuild/.dtbcache.v2
