начала делать для аренды
не разобралась с маппером

--- a/CarRental/CarRentalDesktop/CarRentalDesktop.csproj
+++ b/CarRental/CarRentalDesktop/CarRentalDesktop.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CarRentalCore\CarRentalCore.csproj" />
   </ItemGroup>
   
