--- a/CarRental/CarRentalDesktop/CarRentalDesktop.csproj
+++ b/CarRental/CarRentalDesktop/CarRentalDesktop.csproj
@@ -24,5 +24,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\ClientsView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
   
 </Project>
